fix : styles : Icon card name captilize & navigation alignment

--- a/src/components/containers/navigation-menu/navigation-menu.module.css
+++ b/src/components/containers/navigation-menu/navigation-menu.module.css
@@ -21,7 +21,7 @@
   width: 30px;
 }
 .routeLinks {
-  margin-top: 60px;
+  margin-top: 40px;
 }
 .naviLinkCon {
   align-items: center;
@@ -37,7 +37,7 @@
   display: flex;
   flex-direction: row;
   height: 50px;
-  margin-bottom: 18px;
+  margin-bottom: 12px;
   padding: 11px 0px;
   text-decoration: none;
   transition: background 0.35s ease;
